<resources>
    <string name="app_name">逢甲餘額提醒</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_main">首頁</string>
    <string name="title_course_alert">餘額提醒</string>
    <string name="title_course_book">選課秘笈</string>
    <string name="title_course_search">課程查詢</string>
    <string name="title_donate">donate</string>
    <string name="title_qa">問題回報</string>
    <string name="action_settings">設定</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_check">餘額提醒</string>
    <string name="title_activity_book">選課秘笈</string>
    <string name="title_activity_search">課程查詢</string>
    <string name="title_activity_qa">問題回報</string>
    <string name="title_activity_setting">設定</string>
    <string name="使用瀏覽器開啟">使用瀏覽器開啟</string>
    <string name="使用內部頁面開啟">使用內部頁面開啟</string>
    <string name="請從下列選擇一項進行科學運算donate給我們">請從下列選擇一項進行科學運算donate給我們</string>
    <string name="請使用者注意">請使用者注意，進行大量科學運算將會使用較多的資源以及電量。</string>
    <string name="ac_donate">請使用者注意，長時間請使用AC電源，或是使用桌機運算來donate</string>
    <string name="picture">picture</string>
    <string name="wifi_donate">請注意需使用行動網路，可能會產生數據使用，可使用wifi來進行donate</string>
    <string name="no_hine_cdoe">請注意有些防火牆可能會阻擋，本網頁無任何隱藏代碼</string>
</resources>
